[package]
name = "bakadesk"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.18"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
bakalari = "0.1" # Replace with the actual version of the bakalari crate you use
